--- a/src/main/resources/assets/eastwardjourneys/lang/zh_cn.json
+++ b/src/main/resources/assets/eastwardjourneys/lang/zh_cn.json
@@ -16,10 +16,10 @@
   "block.eastwardjourneys.maple_wall_hanging_sign": "悬挂式枫木告示牌",
   "block.eastwardjourneys.maple_door": "枫木门",
   "block.eastwardjourneys.maple_trapdoor": "枫木活板门",
-  "block.eastwardjourneys.maple_leaves": "枫树树叶",
-  "block.eastwardjourneys.maple_leaf_pile": "枫树叶堆",
-  "block.eastwardjourneys.maple_sapling": "枫树树苗",
-  "block.eastwardjourneys.potted_maple_sapling": "枫树树苗盆栽",
+  "block.eastwardjourneys.maple_leaves": "枫木树叶",
+  "block.eastwardjourneys.maple_leaf_pile": "枫木叶堆",
+  "block.eastwardjourneys.maple_sapling": "枫木树苗",
+  "block.eastwardjourneys.potted_maple_sapling": "枫木树苗盆栽",
   "block.eastwardjourneys.black_pine_log": "黑松原木",
   "block.eastwardjourneys.black_pine_wood": "黑松木",
   "block.eastwardjourneys.stripped_black_pine_log": "去皮黑松原木",
@@ -38,72 +38,157 @@
   "block.eastwardjourneys.black_pine_door": "黑松木门",
   "block.eastwardjourneys.black_pine_trapdoor": "黑松木活板门",
   "block.eastwardjourneys.black_pine_leaves": "黑松树叶",
-  "block.eastwardjourneys.black_pine_leaf_pile": "黑松叶堆",
   "block.eastwardjourneys.black_pine_sapling": "黑松树苗",
   "block.eastwardjourneys.potted_black_pine_sapling": "黑松树苗盆栽",
+  "block.eastwardjourneys.hinoki_log": "桧木原木",
+  "block.eastwardjourneys.hinoki_wood": "桧木",
+  "block.eastwardjourneys.stripped_hinoki_log": "去皮桧木原木",
+  "block.eastwardjourneys.stripped_hinoki_wood": "去皮桧木",
+  "block.eastwardjourneys.hinoki_planks": "桧木木板",
+  "block.eastwardjourneys.hinoki_slab": "桧木台阶",
+  "block.eastwardjourneys.hinoki_stairs": "桧木楼梯",
+  "block.eastwardjourneys.hinoki_button": "桧木按钮",
+  "block.eastwardjourneys.hinoki_fence": "桧木栅栏",
+  "block.eastwardjourneys.hinoki_fence_gate": "桧木栅栏门",
+  "block.eastwardjourneys.hinoki_pressure_plate": "桧木压力板",
+  "block.eastwardjourneys.hinoki_sign": "桧木告示牌",
+  "block.eastwardjourneys.hinoki_wall_sign": "桧木告示牌",
+  "block.eastwardjourneys.hinoki_hanging_sign": "悬挂式桧木告示牌",
+  "block.eastwardjourneys.hinoki_wall_hanging_sign": "悬挂式桧木告示牌",
+  "block.eastwardjourneys.hinoki_door": "桧木门",
+  "block.eastwardjourneys.hinoki_trapdoor": "桧木活板门",
+  "block.eastwardjourneys.hinoki_leaves": "桧木树叶",
+  "block.eastwardjourneys.hinoki_sapling": "桧木树苗",
+  "block.eastwardjourneys.potted_hinoki_sapling": "桧木树苗盆栽",
+  "block.eastwardjourneys.water_fir_log": "冷杉原木",
+  "block.eastwardjourneys.water_fir_wood": "冷杉木",
+  "block.eastwardjourneys.stripped_water_fir_log": "去皮冷杉原木",
+  "block.eastwardjourneys.stripped_water_fir_wood": "去皮冷杉木",
+  "block.eastwardjourneys.water_fir_planks": "冷杉木板",
+  "block.eastwardjourneys.water_fir_slab": "冷杉木台阶",
+  "block.eastwardjourneys.water_fir_stairs": "冷杉木楼梯",
+  "block.eastwardjourneys.water_fir_button": "冷杉木按钮",
+  "block.eastwardjourneys.water_fir_fence": "冷杉木栅栏",
+  "block.eastwardjourneys.water_fir_fence_gate": "冷杉木栅栏门",
+  "block.eastwardjourneys.water_fir_pressure_plate": "冷杉木压力板",
+  "block.eastwardjourneys.water_fir_sign": "冷杉告示牌",
+  "block.eastwardjourneys.water_fir_wall_sign": "冷杉木告示牌",
+  "block.eastwardjourneys.water_fir_hanging_sign": "悬挂式冷杉木告示牌",
+  "block.eastwardjourneys.water_fir_wall_hanging_sign": "悬挂式冷杉木告示牌",
+  "block.eastwardjourneys.water_fir_door": "冷杉木门",
+  "block.eastwardjourneys.water_fir_trapdoor": "冷杉木活板门",
+  "block.eastwardjourneys.autumnal_water_fir_leaves": "变色的冷杉树叶",
+  "block.eastwardjourneys.water_fir_leaves": "冷杉树叶",
+  "block.eastwardjourneys.water_fir_sapling": "冷杉树苗",
+  "block.eastwardjourneys.potted_water_fir_sapling": "冷杉树苗盆栽",
+  "block.eastwardjourneys.saxaul_log": "梭梭原木",
+  "block.eastwardjourneys.saxaul_wood": "梭梭木",
+  "block.eastwardjourneys.stripped_saxaul_log": "去皮梭梭原木",
+  "block.eastwardjourneys.stripped_saxaul_wood": "去皮梭梭木",
+  "block.eastwardjourneys.saxaul_planks": "梭梭木板",
+  "block.eastwardjourneys.saxaul_slab": "梭梭木台阶",
+  "block.eastwardjourneys.saxaul_stairs": "梭梭木楼梯",
+  "block.eastwardjourneys.saxaul_button": "梭梭木按钮",
+  "block.eastwardjourneys.saxaul_fence": "梭梭木栅栏",
+  "block.eastwardjourneys.saxaul_fence_gate": "梭梭木栅栏门",
+  "block.eastwardjourneys.saxaul_pressure_plate": "梭梭木压力板",
+  "block.eastwardjourneys.saxaul_sign": "梭梭木告示牌",
+  "block.eastwardjourneys.saxaul_wall_sign": "梭梭木告示牌",
+  "block.eastwardjourneys.saxaul_hanging_sign": "悬挂式梭梭木告示牌",
+  "block.eastwardjourneys.saxaul_wall_hanging_sign": "悬挂式梭梭告示牌",
+  "block.eastwardjourneys.saxaul_door": "梭梭木门",
+  "block.eastwardjourneys.saxaul_trapdoor": "梭梭木活板门",
+  "block.eastwardjourneys.saxaul_leaves": "梭梭树叶",
+  "block.eastwardjourneys.saxaul_sapling": "梭梭树苗",
+  "block.eastwardjourneys.potted_saxaul_sapling": "梭梭木树苗盆栽",
   "block.eastwardjourneys.zen_lantern": "禅灯",
   "block.eastwardjourneys.soul_zen_lantern": "灵魂禅灯",
+  "block.eastwardjourneys.dark_shoji_screen": "深色屏风",
   "block.eastwardjourneys.shoji_screen": "屏风",
   "block.eastwardjourneys.tatami_mat": "榻榻米垫",
-  "block.eastwardjourneys.long_tatami_mat": "大型榻榻米",
-  "block.eastwardjourneys.aged_tatami_mat": "风化的榻榻米",
-  "block.eastwardjourneys.long_aged_tatami_mat": "风化的大型榻榻米",
-  "block.eastwardjourneys.rice_paddy": "稻田",
+  "block.eastwardjourneys.long_tatami_mat": "大型榻榻米垫",
+  "block.eastwardjourneys.aged_tatami_mat": "风化的榻榻米垫",
+  "block.eastwardjourneys.long_aged_tatami_mat": "风化的大型榻榻米垫",
+  "block.eastwardjourneys.red_fence": "红色栅栏",
+  "block.eastwardjourneys.rice_paddy": "水稻",
   "block.eastwardjourneys.acacia_planks_trapdoor": "金合欢木板活板门",
   "block.eastwardjourneys.birch_planks_trapdoor": "白桦木板活板门",
   "block.eastwardjourneys.dark_oak_planks_trapdoor": "深色橡木木板活板门",
-  "block.eastwardjourneys.jungle_planks_trapdoor": "丛林木木板活板门",
+  "block.eastwardjourneys.jungle_planks_trapdoor": "丛林木板活板门",
   "block.eastwardjourneys.oak_planks_trapdoor": "橡木木板活板门",
   "block.eastwardjourneys.maple_planks_trapdoor": "枫木木板活板门",
   "block.eastwardjourneys.black_pine_planks_trapdoor": "黑松木板活板门",
+  "block.eastwardjourneys.hinoki_planks_trapdoor": "桧木木板活板门",
+  "block.eastwardjourneys.water_fir_planks_trapdoor": "冷杉木板活板门",
+  "block.eastwardjourneys.saxaul_planks_trapdoor": "梭梭木木板活板门",
   "block.eastwardjourneys.spruce_planks_trapdoor": "云杉木板活板门",
-  "block.eastwardjourneys.mangrove_planks_trapdoor": "红树木板活板门",
+  "block.eastwardjourneys.mangrove_planks_trapdoor": "红树木木板活板门",
+  "block.eastwardjourneys.bamboo_planks_trapdoor": "竹板活板门",
   "block.eastwardjourneys.cherry_planks_trapdoor": "樱花木板活板门",
   "block.eastwardjourneys.cobblestone_trapdoor": "圆石活板门",
   "block.eastwardjourneys.smooth_stone_trapdoor": "平滑石头活板门",
   "block.eastwardjourneys.stone_trapdoor": "石头活板门",
   "block.eastwardjourneys.paper_lantern": "纸灯笼",
-  "item.eastwardjourneys.cherry_blossom_boat": "樱花木船",
-  "item.eastwardjourneys.cherry_blossom_chest_boat": "樱花木箱船",
+  "block.eastwardjourneys.enoki_mushroom": "金针菇",
+  "block.eastwardjourneys.shiitake_mushroom": "香菇",
+  "block.eastwardjourneys.enoki_mushroom_block": "金针菇方块",
+  "block.eastwardjourneys.potted_enoki_mushroom": "金针菇盆栽",
+  "block.eastwardjourneys.potted_shiitake_mushroom": "香菇盆栽",
+  "block.eastwardjourneys.flowering_cactus": "开花的仙人掌",
+  "block.eastwardjourneys.potted_flowering_cactus": "开花的仙人掌盆栽",
   "item.eastwardjourneys.maple_boat": "枫木船",
-  "item.eastwardjourneys.maple_chest_boat": "枫木箱船",
+  "item.eastwardjourneys.maple_chest_boat": "枫木运输船",
+  "item.eastwardjourneys.black_pine_boat": "黑松木船",
+  "item.eastwardjourneys.black_pine_chest_boat": "黑松木运输船",
+  "item.eastwardjourneys.hinoki_boat": "桧木船",
+  "item.eastwardjourneys.hinoki_chest_boat": "桧木运输船",
+  "item.eastwardjourneys.water_fir_boat": "冷杉木船",
+  "item.eastwardjourneys.water_fir_chest_boat": "冷杉木运输船",
+  "item.eastwardjourneys.saxaul_boat": "梭梭木船",
+  "item.eastwardjourneys.saxaul_chest_boat": "梭梭木运输船",
   "item.eastwardjourneys.katana": "武士刀",
   "item.eastwardjourneys.kunai": "苦无",
   "item.eastwardjourneys.shuriken": "手里剑",
   "item.eastwardjourneys.ninja_mask": "忍者面具",
   "item.eastwardjourneys.ninja_tunic": "忍者束腰衣",
-  "item.eastwardjourneys.ninja_leggings": "忍者紧身裤",
+  "item.eastwardjourneys.ninja_leggings": "忍者护腿",
   "item.eastwardjourneys.ninja_sandals": "忍者凉鞋",
-  "item.eastwardjourneys.kabuto_helmet": "歌舞伎头盔",
-  "item.eastwardjourneys.kabuto_cuirass": "忍者胸甲",
-  "item.eastwardjourneys.kabuto_greaves": "忍者护腿",
-  "item.eastwardjourneys.kabuto_sandals": "忍者凉鞋",
-  "item.eastwardjourneys.maple_leaf": "枫树叶",
+  "item.eastwardjourneys.kabuto_helmet": "武士头盔",
+  "item.eastwardjourneys.kabuto_cuirass": "武士胸甲",
+  "item.eastwardjourneys.kabuto_greaves": "武士护腿",
+  "item.eastwardjourneys.kabuto_sandals": "武士凉鞋",
+  "item.eastwardjourneys.maple_leaf": "枫叶",
   "item.eastwardjourneys.maple_syrup_bottle": "枫糖浆瓶",
   "item.eastwardjourneys.rice": "大米",
   "item.eastwardjourneys.onigiri": "饭团",
+  "item.eastwardjourneys.congee": "粥",
   "item.eastwardjourneys.koi_bucket": "锦鲤桶",
   "item.eastwardjourneys.koi": "生锦鲤",
   "item.eastwardjourneys.cooked_koi": "熟锦鲤",
   "item.eastwardjourneys.koi_spawn_egg": "锦鲤刷怪蛋",
   "item.eastwardjourneys.tanooki_spawn_egg": "狸猫刷怪蛋",
-  "entity.eastwardjourneys.maple_leaf": "枫树树叶",
+  "item.eastwardjourneys.enoki_mushroom": "金针菇",
+  "item.eastwardjourneys.shiitake_mushroom": "香菇",
+  "item.eastwardjourneys.flowering_cactus": "开花的仙人掌",
+  "entity.eastwardjourneys.maple_leaf": "枫叶",
   "entity.eastwardjourneys.koi_entity": "锦鲤",
-  "entity.eastwardjourneys.cherry_blossom_boat": "樱花木船",
-  "entity.eastwardjourneys.cherry_blossom_chest_boat": "樱花木箱船",
-  "entity.eastwardjourneys.maple_boat": "枫木船",
-  "entity.eastwardjourneys.maple_chest_boat": "枫木箱船",
   "entity.eastwardjourneys.terracotta_warrior": "兵马俑",
+  "entity.eastwardjourneys.mod_boat_entity": "船",
+  "entity.eastwardjourneys.mod_chest_boat_entity": "运输船",
+  "entity.eastwardjourneys.kunai_entity": "苦无",
+  "entity.eastwardjourneys.shuriken_entity": "手里剑",
+  "biome.eastwardjourneys.eastern_forest": "东林",
   "biome.eastwardjourneys.cherry_blossom_slopes": "樱花山坡",
   "biome.eastwardjourneys.cherry_blossom_bamboo_jungle": "樱花竹林",
-  "biome.eastwardjourneys.maple_woods": "枫树树林",
-  "biome.eastwardjourneys.oak_and_maple_forest": "橡树和枫树森林",
+  "biome.eastwardjourneys.maple_woods": "枫木森林",
+  "biome.eastwardjourneys.oak_and_maple_forest": "枫像森林",
   "biome.eastwardjourneys.black_pine_forest": "黑松森林",
   "biome.eastwardjourneys.stone_forest": "石林",
+  "biome.eastwardjourneys.old_growth_fir_forest": "原始冷杉林",
   "enchantment.eastwardjourneys.double_jump": "连跳",
   "enchantment.eastwardjourneys.double_jump.desc": "开启连跳",
-  "subtitles.item.maple_syrup_bottle.drink": "啜饮",
-  "subtitles.entity.player.double_jump": "玩家：连跳",
+  "subtitles.item.maple_syrup_bottle.drink": "啜食",
+  "subtitles.entity.player.double_jump": "连跳",
   "subtitles.entity.koi_entity.death": "锦鲤：死亡",
   "subtitles.entity.koi_entity.flop": "锦鲤：扑腾",
   "subtitles.entity.koi_entity.hurt": "锦鲤：受伤",
@@ -111,7 +196,8 @@
   "subtitles.entity.tanooki.death": "狸猫：死亡",
   "subtitles.entity.tanooki.hurt": "狸猫：受伤",
   "subtitles.entity.tanooki.ambient": "狸猫：尖叫",
-  "subtitles.entity.terracotta_warrior.attack": "兵马俑",
+  "subtitles.entity.terracotta_warrior.attack": "兵马俑：攻击",
   "subtitles.entity.terracotta_warrior.death": "兵马俑：死亡",
-  "subtitles.entity.terracotta_warrior.hurt": "兵马俑：受伤"
+  "subtitles.entity.terracotta_warrior.hurt": "兵马俑：受伤",
+  "tab.mod": "樱花石窟"
 }
