Add warped and crimson hidden trapdoors

--- a/src/main/resources/assets/eastwardjourneys/lang/en_us.json
+++ b/src/main/resources/assets/eastwardjourneys/lang/en_us.json
@@ -128,6 +128,8 @@
   "block.eastwardjourneys.cobblestone_trapdoor": "Cobblestone Trapdoor",
   "block.eastwardjourneys.smooth_stone_trapdoor": "Smooth Stone Trapdoor",
   "block.eastwardjourneys.stone_trapdoor": "Stone Trapdoor",
+  "block.eastwardjourneys.warped_planks_trapdoor": "Warped Planks Trapdoor",
+  "block.eastwardjourneys.crimson_planks_trapdoor": "Crimson Planks Trapdoor",
   "block.eastwardjourneys.paper_lantern": "Paper Lantern",
   "block.eastwardjourneys.enoki_mushroom": "Enoki Mushroom",
   "block.eastwardjourneys.shiitake_mushroom": "Shiitake Mushroom",
