Add mangrove village structure and chinese translations for content in previous release

--- a/src/main/resources/assets/eastwardjourneys/lang/zh_cn.json
+++ b/src/main/resources/assets/eastwardjourneys/lang/zh_cn.json
@@ -17,9 +17,9 @@
   "block.eastwardjourneys.maple_door": "枫木门",
   "block.eastwardjourneys.maple_trapdoor": "枫木活板门",
   "block.eastwardjourneys.maple_leaves": "枫木树叶",
-  "block.eastwardjourneys.maple_leaf_pile": "枫木叶堆",
-  "block.eastwardjourneys.maple_sapling": "枫木树苗",
-  "block.eastwardjourneys.potted_maple_sapling": "枫木树苗盆栽",
+  "block.eastwardjourneys.maple_leaf_pile": "枫树叶堆",
+  "block.eastwardjourneys.maple_sapling": "枫树树苗",
+  "block.eastwardjourneys.potted_maple_sapling": "枫树树苗盆栽",
   "block.eastwardjourneys.black_pine_log": "黑松原木",
   "block.eastwardjourneys.black_pine_wood": "黑松木",
   "block.eastwardjourneys.stripped_black_pine_log": "去皮黑松原木",
@@ -58,8 +58,8 @@
   "block.eastwardjourneys.hinoki_door": "桧木门",
   "block.eastwardjourneys.hinoki_trapdoor": "桧木活板门",
   "block.eastwardjourneys.hinoki_leaves": "桧木树叶",
-  "block.eastwardjourneys.hinoki_sapling": "桧木树苗",
-  "block.eastwardjourneys.potted_hinoki_sapling": "桧木树苗盆栽",
+  "block.eastwardjourneys.hinoki_sapling": "桧树树苗",
+  "block.eastwardjourneys.potted_hinoki_sapling": "桧树树苗盆栽",
   "block.eastwardjourneys.water_fir_log": "冷杉原木",
   "block.eastwardjourneys.water_fir_wood": "冷杉木",
   "block.eastwardjourneys.stripped_water_fir_log": "去皮冷杉原木",
@@ -100,16 +100,23 @@
   "block.eastwardjourneys.saxaul_trapdoor": "梭梭木活板门",
   "block.eastwardjourneys.saxaul_leaves": "梭梭树叶",
   "block.eastwardjourneys.saxaul_sapling": "梭梭树苗",
-  "block.eastwardjourneys.potted_saxaul_sapling": "梭梭木树苗盆栽",
+  "block.eastwardjourneys.potted_saxaul_sapling": "梭梭树苗盆栽",
   "block.eastwardjourneys.zen_lantern": "禅灯",
   "block.eastwardjourneys.soul_zen_lantern": "灵魂禅灯",
   "block.eastwardjourneys.dark_shoji_screen": "深色屏风",
   "block.eastwardjourneys.shoji_screen": "屏风",
+  "block.eastwardjourneys.dark_shoji_screen_grided": "深色网格屏风",
+  "block.eastwardjourneys.shoji_screen_grided": "网格屏风",
+  "block.eastwardjourneys.dark_shoji_screen_grided_heavy": "带底的深色网格屏风",
+  "block.eastwardjourneys.shoji_screen_grided_heavy": "带底的网格屏风",
+  "block.eastwardjourneys.small_dark_shoji_screen": "小型深色屏风",
+  "block.eastwardjourneys.small_shoji_screen": "小型屏风",
   "block.eastwardjourneys.tatami_mat": "榻榻米垫",
   "block.eastwardjourneys.long_tatami_mat": "大型榻榻米垫",
   "block.eastwardjourneys.aged_tatami_mat": "风化的榻榻米垫",
   "block.eastwardjourneys.long_aged_tatami_mat": "风化的大型榻榻米垫",
   "block.eastwardjourneys.red_fence": "红色栅栏",
+  "block.eastwardjourneys.polished_gravel": "磨制沙砾",
   "block.eastwardjourneys.rice_paddy": "水稻",
   "block.eastwardjourneys.acacia_planks_trapdoor": "金合欢木板活板门",
   "block.eastwardjourneys.birch_planks_trapdoor": "白桦木板活板门",
@@ -128,6 +135,8 @@
   "block.eastwardjourneys.cobblestone_trapdoor": "圆石活板门",
   "block.eastwardjourneys.smooth_stone_trapdoor": "平滑石头活板门",
   "block.eastwardjourneys.stone_trapdoor": "石头活板门",
+  "block.eastwardjourneys.warped_planks_trapdoor": "诡异木板活板门",
+  "block.eastwardjourneys.crimson_planks_trapdoor": "绯红木板活板门",
   "block.eastwardjourneys.paper_lantern": "纸灯笼",
   "block.eastwardjourneys.enoki_mushroom": "金针菇",
   "block.eastwardjourneys.shiitake_mushroom": "香菇",
@@ -170,6 +179,7 @@
   "item.eastwardjourneys.enoki_mushroom": "金针菇",
   "item.eastwardjourneys.shiitake_mushroom": "香菇",
   "item.eastwardjourneys.flowering_cactus": "开花的仙人掌",
+  "item.eastwardjourneys.shoji_paper": "屏风纸",
   "entity.eastwardjourneys.maple_leaf": "枫叶",
   "entity.eastwardjourneys.koi_entity": "锦鲤",
   "entity.eastwardjourneys.terracotta_warrior": "兵马俑",
@@ -199,5 +209,10 @@
   "subtitles.entity.terracotta_warrior.attack": "兵马俑：攻击",
   "subtitles.entity.terracotta_warrior.death": "兵马俑：死亡",
   "subtitles.entity.terracotta_warrior.hurt": "兵马俑：受伤",
+  "shoji.paper.red_sun": "赤日",
+  "shoji.paper.wave": "波浪",
+  "shoji.paper.moldy": "霉菌",
+  "shoji.paper.gold": "金色",
+  "shoji.paper.cherry": "樱花",
   "tab.mod": "樱花石窟"
 }
